<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:hint="@string/title"
            android:background="@drawable/edit_text_black_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/edit_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_image"
        app:layout_constraintTop_toBottomOf="@+id/input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_black_border"
            android:gravity="start|center"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout22"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_gram"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_black_border"
            android:gravity="start"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout22">

        <AutoCompleteTextView
            android:id="@+id/autoComplete2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="gram or thing"
            android:textColorHint="@color/black"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/edit_image"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_black_border"
        android:src="@drawable/baseline_add_a_photo_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout" />



    <Button
        android:id="@+id/save_product"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>