<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/title_and_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/change_btn"
                        android:layout_width="30dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:src="@drawable/menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="25dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/change_btn"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/containers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/title_and_btn"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toBottomOf="@id/title_and_btn"
                    tools:ignore="RtlSymmetry">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/gram_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/gram"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="end|center_vertical"
                            android:text="@string/gram"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/hint_gram"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hint_gram"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="start|center"
                            android:text="@string/gram"
                            android:textColor="@color/grey"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/gram_price_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gram_container">

                        <TextView
                            android:id="@+id/gram_price"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="end|center"
                            android:text="@string/unit_price"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hint_gram_price"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="start|center"
                            android:text="@string/price"
                            android:textColor="@color/grey"
                            app:layout_constraintEnd_toStartOf="@+id/gram_price"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/c"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/price_container">

                        <TextView
                            android:id="@+id/gram_c"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="end|center_vertical"
                            android:text="a"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/hint_gram_c"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hint_gram_c"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="start|center"
                            android:text="@string/gram"
                            android:textColor="@color/grey"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/gram_price_container_c"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/c">

                        <TextView
                            android:id="@+id/gram_price_c"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="end|center"
                            android:text="@string/unit_price"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hint_gram_price_c"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="start|center"
                            android:text="@string/price"
                            android:textColor="@color/grey"
                            app:layout_constraintEnd_toStartOf="@+id/gram_price_c"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/price_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gram_price_container">

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center_vertical|end"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hint_price"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="start|center"
                            android:text="@string/kg_price"
                            android:textColor="@color/grey"
                            app:layout_constraintEnd_toStartOf="@+id/price"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/price_container_c"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gram_price_container_c">

                        <TextView
                            android:id="@+id/price_c"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center_vertical|end"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hint_price_c"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="start|center"
                            android:text="@string/kg_price"
                            android:textColor="@color/grey"
                            app:layout_constraintEnd_toStartOf="@+id/price_c"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintStart_toStartOf="@+id/title_and_btn"
                    app:layout_constraintTop_toTopOf="@+id/containers" />

                <ImageView
                    android:id="@+id/empty_avatar"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:src="@drawable/noun_cake_6710939"
                    app:layout_constraintStart_toStartOf="@+id/title_and_btn"
                    app:layout_constraintTop_toTopOf="@+id/containers" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>